--- a/local/css/frame.css
+++ b/local/css/frame.css
@@ -1,6 +1,7 @@
 .frame-wrap {
   height: 100%;
   width: 100%;
+  padding: 1%;
   overflow: hidden;
   background-color: #1362AC;
   position: relative;
@@ -14,6 +15,7 @@
   animation: popUp 0.35s ease;
 }
 .frame-nav {
+  margin-bottom: 2%;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -25,16 +27,23 @@
   -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  margin: 1em 2%;
+}
+.burger-menu-icon{
+  height: 1.25em;
+  padding: 0 1%;
+  margin: auto 0;
 }
 .frame-menu-icon {
-  height: 2.5em;
+  height: 1.5em;
   margin: auto 0;
   cursor: pointer;
+  -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
-.frame-menu-icon:hover, .frame-menu-icon:active{
-  height: 2.7em;
+.frame-menu-icon:hover, .frame-menu-icon:active {
+  -webkit-transform: scale(1.05);
+  -ms-transform: scale(1.05);
+  transform: scale(1.05);
 }
 .frame-nav > div {
   display: inherit;
@@ -145,12 +154,15 @@
 }
 .user-dropdown {
   width: 100%;
+  min-width: inherit;
   background-color: #1986D9;
 }
 .user-dropdown > li {
   height: 3em;
   text-indent: 2em;
   cursor: pointer;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 .user-dropdown > li > a {
   line-height: 3;
@@ -164,18 +176,17 @@
 }
 .alarms-btn {
   background-image: url(../img/button/alarm-white.png);
-  background-position: 5% 50%;
-  background-repeat: no-repeat;
+  opacity: 0.35;
+}
+.alarms-btn.trigered {
+  opacity: 1;
+  background-color: #5fca8f !important;
 }
 .account-settings-btn {
   background-image: url(../img/button/account-settings.png);
-  background-position: 5% 50%;
-  background-repeat: no-repeat;
 }
 .logout-btn {
   background-image: url(../img/button/logout-white.png);
-  background-position: 5% 50%;
-  background-repeat: no-repeat;
 }
 .user-info {
   display: -webkit-box;
@@ -192,13 +203,13 @@
 }
 .user-avatar {
   border: 0.1em solid rgba(255, 255, 255, 0.5);
-  height: 3em;
-  width: 3em;
+  height: 2.5em;
+  width: 2.5em;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   border-radius: 50%;
-  margin: auto 0.5em;
+  margin: auto 1em auto 0;
 }
 .user-details {
   margin: auto 2em auto 1em;
@@ -220,21 +231,20 @@
 .frame-content-wrap {
   position: relative;
   background-color: #0F2A41;
-  margin: 0 2%;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  height: calc(100% - 3em - 5%);
+  height: 88%;
   overflow: hidden;
 }
 .frame-sidebar {
   position: absolute;
   z-index: 1;
   background-color: rgba(0, 0, 0, 0.75);
-  width: 25em;
   height: 100%;
-  left: -25em;
+  left: -85%;
+  width: 85%;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -262,7 +272,6 @@
   -ms-flex-pack: justify;
   justify-content: space-between;
   padding: 1em;
-  background-color: #21384B;
   color: #fff;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -286,14 +295,17 @@
 /* bootstrap css override */
 
 .server-dropdown {
-  margin: 1em auto;
+  margin: 1% auto;
   left: auto;
   width: 95%;
-  background-color: #21384B;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 .server-dropdown-ul {
   width: 100%;
-  background-color: #21384B;
+  background-color: rgba(0, 0, 0, 0.85);
+  border-bottom: 0.1em solid;
+  max-height: 15em;
+  overflow: auto;
 }
 .server-dropdown-ul>li>a:hover {
   background-color: rgba(255, 255, 255, 0.3);
@@ -339,12 +351,12 @@
   background-color: inherit;
   color: #fff;
 }
-.nhome-btn{
+.nhome-btn {
   text-indent: 5em;
   background-image: url(../img/filter-icon/nhome.png);
   background-size: 3em;
 }
-.nhome-btn.active, .nhome-btn:hover{
+.nhome-btn.active, .nhome-btn:hover {
   background-color: #e6e6e6;
   background-size: 10em;
   text-indent: 13em;
@@ -412,17 +424,17 @@
 .sidebar-activity-log {
   /*background-color: #122C42;*/
   width: 100%;
-  max-height: 25em;
   color: #949EAC;
   overflow: auto;
   padding: 0.5em 0;
 }
 .sidebar-activity-log > img {
-  padding: 5em;
+  margin: 1em 35%;
+  height: 8em;
 }
 .sidebar-activity-log ul {
   list-style: none;
-  padding-left: 2em;
+  padding-left: 5%;
 }
 .sidebar-activity-log ul li {
   display: -webkit-box;
@@ -575,10 +587,14 @@
   -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 .all-rooms-view-point {
-  margin-top: 1em;
-  max-height: calc(100% - 5.5em);
+  margin-top: 1%;
+  max-height: calc(100% - 3.1em);
   overflow: auto;
 }
 .category-wrap {}
@@ -625,6 +641,10 @@
 }
 .category-name {
   cursor: pointer;
+  margin: auto 1%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .category-name-form {
   display: -webkit-box;
@@ -653,58 +673,19 @@
   background-position: center;
   background-repeat: no-repeat;
 }
-
-/*
-.add-category-wrap form {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  height: 3em;
-}
-.add-category-wrap input {
-  height: 2.25em;
-}
-.add-category-submit-btn {
-  background: #11599D url(../img/button/checked.png) 95% 50% no-repeat;
-  height: 100%;
-  padding: 0 1em;
-  text-align: left;
-}
-.add-category-submit-btn p {
-  line-height: 3;
-  margin-right: 0.75em;
-}
-.add-category-reset-btn {
-  background: #295376 url(../img/button/cross-dark.png) 50% no-repeat;
-  height: 100%;
-}
-.edit-category-btn {
-  background-image: url(../img/button/edit-room.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: inherit;
-  height: 2.5em;
-  width: 2.5em;
-  border: 0;
-}*/
-
 .favorites-sensors-wrap {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-flex-flow: row wrap;
-  -ms-flex-flow: row wrap;
-  flex-flow: row wrap;
+  -webkit-flex-flow: row nowrap;
+  -ms-flex-flow: row nowrap;
+  flex-flow: row nowrap;
   -webkit-box-pack: start;
   -webkit-justify-content: flex-start;
   -ms-flex-pack: start;
   justify-content: flex-start;
+  overflow: auto;
 }
 .sensor-wrap {
   display: -webkit-box;
@@ -737,19 +718,18 @@
 }
 .info-sensor > img {
   position: absolute;
-  height: 3em;
+  height: 2em;
   width: auto;
   opacity: 0.5;
-  margin: 0.25em auto;
 }
 .sensor-details {
-  margin-left: 3em;
+  margin-left: 2.25em;
   line-height: 1;
   text-align: left;
 }
 .sensor-details h1 {
   margin: 0;
-  font-size: 3em;
+  font-size: 2em;
   font-weight: 100;
 }
 .sensor-details p {
@@ -775,19 +755,19 @@
 }
 .frame-view {
   position: relative;
-  margin-top: 1em;
-  padding: 0 1em;
-  height: calc(100vh - 11em);
+  padding: 1%;
+  height: 75vh;
   overflow-y: auto;
   overflow-x: hidden;
 }
 .frame-nav-bottom {
   position: absolute;
   bottom: 0;
+  left: 0;
+  right: 0;
   background-color: #1B3449;
   border-top: 0.1em solid #264A69;
-  height: 4em;
-  width: 100%;
+  height: 3em;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -795,20 +775,26 @@
   -webkit-flex-flow: row nowrap;
   -ms-flex-flow: row nowrap;
   flex-flow: row nowrap;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
 }
 .filter-btn {
-  min-width: 8em;
-  height: 4em;
-  line-height: 4;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  line-height: 3;
   border-radius: 0;
   margin: 0;
   box-sizing: content-box;
   background-color: inherit;
-  background-position: 10% 50%;
+  background-position: center;
   background-repeat: no-repeat;
   text-indent: 3em;
   color: #8295A6;
@@ -844,23 +830,127 @@
   background-image: url(../img/button/recently-white.png);
 }
 .settings-cog-btn {
+  background-color: rgba(0, 0, 0, 0.7);
   background-image: url(../img/button/cog.png);
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
+  background-position: 10% 50%;
+  background-repeat: no-repeat;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 3em;
+}
+.most-used-dev-wrap {
+  width: 100%;
+}
+@media screen and (min-width: 410px) {
+  .frame-content-wrap {
+    height: 88%;
+  }
+  .frame-view {
+    height: 84vh;
+  }
+  .settings-cog-btn {
+    height: 3em;
+    line-height: 3;
+  }
+}
+@media screen and (min-width: 600px) {
+  .frame-sidebar {
+    width: 50%;
+    left: -50%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .frame-view {
+    height: 80vh;
+  }
+  .frame-sidebar {
+    width: 40%;
+    left: -40%;
+  }
+  .filter-btn {
+    background-position: 15% 50%;
+  }
+  .all-rooms-view-point {
+    max-height: calc(100% - 4.1em);
+  }
+  .most-used-dev-wrap {
+    width: 18em;
+    margin: auto;
+  }
+  .user-dropdown > li {
+    background-position: 5% 50%;
+  }
 }
 @media screen and (min-width: 992px) {
   .frame-sidebar {
     position: relative;
+    width: 35%;
     left: 0;
     background-color: inherit;
   }
   .frame-sidebar.active {
-    left: -25em;
+    left: -35%;
     position: absolute;
   }
   .sidebar-nav-btn {
     background-color: #122C42;
+  }
+  .settings-cog-btn, .server-dropdown {
+    background-color: #14334B;
+  }
+  .most-used-dev-wrap {
+    margin: 1%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .frame-view {
+    height: 85vh;
+  }
+  .frame-menu-icon{
+    height: auto;
+  }
+  .burger-menu-icon{
+    height: 1.75em;
+  }
+  .frame-nav {
+    margin-bottom: 1%
+  }
+  .frame-content-wrap {
+    height: 91%;
+  }
+  @media screen and (min-height: 900px) {
+    .frame-content-wrap {
+      height: 93%;
+    }
+    .sidebar-activity-log {
+      max-height: calc(100% - 40em);
+    }
+  }
+}
+@media screen and (min-width: 1600px) {
+  .frame-sidebar {
+    width: 25%;
+  }
+  .frame-sidebar.active {
+    left: -25%;
+  }
+  .user-avatar {
+    height: 3em;
+    width: 3em;
+  }
+  .custom-modal-window{
+    bottom: 4em !important;
+  }
+  .frame-nav-bottom, .filter-btn, .settings-cog-btn {
+    height: 4em;
+    line-height: 4;
+  }
+  .server-dropdown {
+    margin: 4% auto;
+  }
+  .frame-content-wrap {
+    height: 93%;
   }
 }
