--- a/local/css/logIn.css
+++ b/local/css/logIn.css
@@ -1,26 +1,25 @@
-.login-template{
+.login-template {
   position: relative;
   height: 100%;
   width: 100%;
   background: #fff url(../img/login-bg.png) center no-repeat;
 }
-.login-wrap{
+.login-wrap {
   position: absolute;
   width: 100%;
-  padding: 0 1em;
+  height: 100%;
+  padding: 1%;
   left: 0;
-  top: 10em;
   font-weight: 100;
-  font-size: 1.1em;
   color: #fff;
 }
-.login-description{
-  min-height: 16em;
+.login-description {
+  max-height: 45%;
   background-color: #1272CD;
   line-height: 1;
 }
-.register-btn{
-  margin-top: 2.5em;
+.register-btn {
+  margin: 0.25em;
   border: 0.1em solid #fff;
   width: 50%;
   background-image: url(../img/button/add-user.png) !important;
@@ -28,84 +27,136 @@
   background-position: 95% 50%;
   text-align: left;
 }
-.login-form{
-  min-height: 16em;
+.login-form {
   background-color: #1B3449;
-  padding: 2em 1em;
+  padding: 2%;
 }
-.form-input-wrap{
+.form-input-wrap {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-flex-flow: column nowrap;
+  -ms-flex-flow: column nowrap;
   flex-flow: column nowrap;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
   justify-content: center;
   padding: 0;
 }
-.login-btn{
+.login-btn {
   width: 100%;
   margin-top: 1.5em;
   background-color: #1D83E4;
   color: #fff;
 }
-.register-form{
+.register-form {
+  max-height: 55%;
+  overflow: auto;
+  background-color: #1B3449;
+  padding: 2%;
+  display: none;
+}
+.forgot-password-form {
   min-height: 16em;
   background-color: #1B3449;
   padding: 2em 1em;
   display: none;
 }
-.forgot-password-form{
-  min-height: 16em;
-  background-color: #1B3449;
-  padding: 2em 1em;
-  display: none;
-}
-.back-to-login-btn{
+.back-to-login-btn {
   background-color: #2E506C;
   margin: 1.5em 0
 }
-
-@keyframes hideForm{
-  0%{
+@-webkit-keyframes hideForm {
+  0% {
     margin-left: 0;
     opacity: 1;
   }
-  100%{
+  100% {
     margin-left: 5%;
     opacity: 0;
   }
 }
-@keyframes showForm{
-  0%{
+@keyframes hideForm {
+  0% {
+    margin-left: 0;
+    opacity: 1;
+  }
+  100% {
     margin-left: 5%;
     opacity: 0;
   }
-  100%{
+}
+@-webkit-keyframes showForm {
+  0% {
+    margin-left: 5%;
+    opacity: 0;
+  }
+  100% {
     margin-left: 0;
     opacity: 1;
   }
 }
-@media only screen and (min-width : 992px) {
-  .register-form  div{
+@keyframes showForm {
+  0% {
+    margin-left: 5%;
+    opacity: 0;
+  }
+  100% {
+    margin-left: 0;
+    opacity: 1;
+  }
+}
+@media screen and (min-width: 600px) {
+  .register-btn {
+    margin: 1em 0 0.25em;
+  }
+}
+@media screen and (min-width: 768px) {
+  .login-wrap {
+    top: 4em;
+  }
+}
+@media screen and (min-width: 992px) {
+  .register-form div {
     padding-right: 1em;
   }
-  .login-wrap{
-    top: 25em;
+  .login-wrap {
+    top: 10em;
     height: 22em;
     padding: 0;
   }
-  .login-description{
+  .login-description {
     width: 60%;
+    max-height: none;
     height: 100%;
     padding: 2em 5em;
   }
-  .login-form, .register-form, .forgot-password-form{
+  .login-form, .register-form, .forgot-password-form {
     height: 100%;
+    max-height: none;
+  }
+  .register-btn {
+    margin: 3em 0 0.25em;
   }
 }
 @media screen and (min-width: 1200px) {
-  .login-description{
+  .login-wrap {
+    top: 20em;
+    font-size: 1.15em;
+  }
+  .login-description {
     width: 60%;
     padding: 2em 5em 0 10em;
+  }
+  .register-btn {
+    margin: 4em 0 0.25em;
+  }
+  /* RESOLUTION ABOVE 1440x900 mostly*/
+  @media screen and (min-height: 900){
+    .login-wrap {
+      top: 18em;
+    }
   }
 }
