--- a/local/css/settings.css
+++ b/local/css/settings.css
@@ -174,6 +174,7 @@
   background-size: 5.5em;
   text-indent: 40%;
   text-align: left;
+  animation: popUp 0.35s ease;
 }
 .server-status-btn.online {
   border: 0.2em solid #5FCA8F;
@@ -182,6 +183,7 @@
 .server-status-btn.offline {
   border: 0.2em solid #CF3437;
   background-image: url(../img/button/not-up-to-date.png);
+  cursor: pointer;
 }
 .settings-btn {
   width: 100%;
@@ -303,7 +305,10 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .server-log-load-more > img {
   height: 1em;
@@ -331,9 +336,15 @@
 .account-settings-box{
   background-color: #254259;
   margin: 0.15em;
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 .account-settings-avatar-wrap{
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
   background-color: #2C4B64;
   padding: 0.5em;
