--- a/local/css/style.css
+++ b/local/css/style.css
@@ -17,6 +17,7 @@ html, body {
   padding: 0;
   height: 100%;
   width: 100%;
+  overflow: hidden;
   font-family: 'ProximaNova', sans-serif;
   scrollbar-face-color: #26455F;
   scrollbar-track-color: #b7bfc7;
@@ -237,26 +238,26 @@ input:disabled ~ label, input:disabled {
 .template-nav {
   position: relative;
   width: 100%;
-  height: 4em;
-  margin-bottom: 1.5em;
+  height: 3em;
   color: #fff;
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
-  -webkit-flex-flow: row wrap;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 .display-devices {
   color: #7BA0BF;
-  padding: 1em 2em;
+  padding: 1%;
 }
-.display-devices > h4{
+.display-devices > h4 {
   cursor: pointer;
 }
 .display-devices-row {
@@ -265,29 +266,32 @@ input:disabled ~ label, input:disabled {
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
-  -webkit-flex-flow: row wrap;
-  -ms-flex-flow: row wrap;
-  flex-flow: row wrap;
-  padding: 1em;
+  -webkit-flex-flow: column wrap;
+  -ms-flex-flow: column wrap;
+  flex-flow: column wrap;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: 1%;
 }
 .add-new-btn {
   background: #1D83E4 url() 95% 50% no-repeat;
-  margin: 1em;
 }
 .google-map {
   width: 100%;
   min-height: 21em;
 }
-.google-map-input{
+.google-map-input {
   color: #000;
 }
 .hidden-input {
   display: none;
 }
-.margin-auto{
+.margin-auto {
   margin: auto;
 }
-.color-red{
+.color-red {
   color: #EC3535;
 }
 .color-green {
@@ -320,7 +324,9 @@ input:disabled ~ label, input:disabled {
   display: -ms-flexbox;
   display: flex;
 }
-.row-wrap{
+.row-wrap {
+  -webkit-flex-flow: row wrap;
+  -ms-flex-flow: row wrap;
   flex-flow: row wrap;
 }
 .justify-end {
@@ -345,4 +351,11 @@ input:disabled ~ label, input:disabled {
 .pop-up {
   -webkit-animation: popUp 0.35s ease;
   animation: popUp 0.35s ease;
+}
+@media screen and (min-width: 768px) {
+  .display-devices-row {
+    -webkit-flex-flow: row wrap;
+    -ms-flex-flow: row wrap;
+    flex-flow: row wrap;
+  }
 }
