--- a/local/css/security.css
+++ b/local/css/security.css
@@ -89,6 +89,55 @@
 .camera-live-stream {
   width: 100%;
 }
+.camera-live-stream:-webkit-full-screen {
+  position:fixed;
+  top:0;
+  right:0;
+  bottom:0;
+  left:0;
+  margin:0;
+  box-sizing:border-box;
+  width:100%;
+  height:100%;
+  object-fit:contain;
+}
+.camera-live-stream:-moz-full-screen {
+  position:fixed;
+  top:0;
+  right:0;
+  bottom:0;
+  left:0;
+  margin:0;
+  box-sizing:border-box;
+  width:100%;
+  height:100%;
+  object-fit:contain;
+}
+.camera-live-stream:-ms-fullscreen {
+  position:fixed;
+  top:0;
+  right:0;
+  bottom:0;
+  left:0;
+  margin:0;
+  box-sizing:border-box;
+  width:100%;
+  height:100%;
+  object-fit:contain;
+}
+.camera-live-stream:fullscreen {
+  position:fixed;
+  top:0;
+  right:0;
+  bottom:0;
+  left:0;
+  margin:0;
+  box-sizing:border-box;
+  width:100%;
+  height:100%;
+  -o-object-fit:contain;
+     object-fit:contain;
+}
 .full-screen-btn {
   background: url(../img/button/full-screen.png) 50% no-repeat;
   position: absolute;
@@ -106,7 +155,4 @@
   }
 }
 @media screen and (min-width: 1200px){
-  .camera-live-stream {
-    width: auto;%;
-  }
 }
