--- a/local/css/add-server.css
+++ b/local/css/add-server.css
@@ -1,6 +1,5 @@
 .add-server-prompt {
   background-color: #14314A;
-  height: 10em;
   width: 100%;
   border-radius: 0.45em;
   color: #fff;
@@ -13,14 +12,15 @@
   -webkit-justify-content: flex-start;
   -ms-flex-pack: start;
   justify-content: flex-start;
+  margin: 1% 0;
 }
 .add-server-img {
   height: 5em;
   width: 5em;
-  margin: auto 3em;
+  margin: auto 5%;
 }
 .add-server-prompt div {
-  padding: 2.5em 0;
+  padding: 2% 0;
 }
 .add-new-plus-btn {
   background: #0D96FF url(../img/button/plus.png) 95% 50% no-repeat;
@@ -30,12 +30,12 @@
   margin-right: 1em;
 }
 .add-server-window-wrap {
-  position: absolute;
-  top: 1em;
-  width: 35em;
+  position: relative;
+  top: 1%;
+  /*width: 35em;*/
   background-color: #123048;
   color: #fff;
-  padding-bottom: 2em;
+  /*padding-bottom: 2em;*/
   border-radius: 0.35em;
   box-shadow: 0.1em 0.1em 0.5em rgba(0, 0, 0, 0.5);
   display: -webkit-box;
@@ -56,33 +56,40 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  height: 5em;
-  margin: 2.5em 0;
+  /*height: 5em;
+  margin: 2.5em 0;*/
+}
+.close-btn-x{
+  position: absolute;
+  top: 1%;
+  right: 1%;
+  cursor: pointer;
 }
 .add-server-window-img {
   height: 5em;
   width: auto;
-  margin: auto 2em;
-  margin-right: 3em;
+  margin: auto 2%;
+  /*margin-right: 3em;*/
 }
 .add-server-download-platform-btn {
   width: 100%;
-  height: 5em;
+  height: 3.5em;
   text-align: left;
   border-radius: 0;
   background-color: #16354E;
 }
 .add-server-download-platform-btn > img {
-  height: 3.5em;
-  width: 3.5em;
-  margin: 0.75em 1.5em;
+  height: 2.5em;
+  width: 2.5em;
+  margin: 0.5em 2em 0.5em 1em;
 }
 .add-server-window-dark-wrap {
   position: absolute;
-  top: 1em;
-  width: 30em;
-  left: 38em;
-  padding: 5em;
+  top: 0;
+  bottom: 0;
+  /*width: 30em;
+  left: 38em;*/
+  padding: 5%;
   text-align: center;
   background-color: #0F2639;
   color: #C1DBF0;
@@ -133,7 +140,7 @@
 .settings-tab-default > .slide-toggle-wrap {
   width: 40%;
 }
-.add-server-succes{
+.add-server-succes {
   position: absolute;
   top: 0;
   right: 0;
@@ -141,7 +148,28 @@
   left: 0;
   text-align: center;
   padding: 5em;
-  background-color: rgba(29,131,228, 0.85);
+  background-color: rgba(29, 131, 228, 0.85);
   -webkit-animation: popUp 0.5s ease;
-          animation: popUp 0.5s ease;
+  animation: popUp 0.5s ease;
+}
+@media screen and (min-width: 768px) {
+  .add-server-window-head {
+    padding: 3%;
+  }
+  .add-server-window-img {
+    margin-right: 5%;
+  }
+  .add-server-download-platform-btn {
+    height: 4.5em;
+  }
+  .add-server-download-platform-btn > img {
+    height: 3.5em;
+    width: 3.5em;
+  }
+  .add-server-window-dark-wrap {
+    bottom: auto;
+    top: 25%;
+    left: 2%;
+    right: -2%;
+  }
 }
